--- a/_posts/2019-12-31-byebye_2019.md
+++ b/_posts/2019-12-31-byebye_2019.md
@@ -13,11 +13,13 @@ category: life
 
 - 2019年， 保持看书的好习惯，感觉获益匪浅。 《无声告白》 让我明白有时候以爱之名给人的压力却会更大， 刘慈欣等人的 《黑客横行》 更多是在科幻的外衣之下以戏谑的方式调侃这个社会，让作为程序员的自己感觉原来有些故事是只有程序员才看得懂的。 
 
-- 工作上因为项目而收获很好的认可，同时新的挑战就是如何管理更多的人。 一个好的团队阶梯是必要的，而如何让大家认可同一个目标以及如何让每一步都切实可行是一个巨大挑战。 回归技术型领导对自己是个更好的提升，所以应该在来年好好把握。 
+- 工作上因为项目而收获很好的认可，同时新的挑战就是如何管理更多的人。 一个好的团队阶梯是必要的，而如何让大家认可同一个目标以及如何让每一步都切实可行是一个巨大挑战。 回归技术型领导对自己是个更好的提升，所以要在来年好好把握。 
 
-- 家庭方面，年初全家去新西兰， 暑假还带了父母去了长沙当面爸爸参军的地方以及桂林欣赏桂林山水，一切安排都挺满意。 自己也出差美国两次，去参加了思科的开发者大会。 这么算起来，2019年有超过两个月不在杭州。 似乎还是挺忙的。 
+- 家庭方面，年初全家去了新西兰， 暑假还带了父母去了长沙当年爸爸参军的地方以及桂林游览山水，一切安排都挺满意。 自己也出差美国两次，去参加了思科的开发者大会。 这么算起来，2019年有超过两个月不在杭州。 似乎还是挺忙的。 
 
-- 如果要打低分，应该是健身。 年初定的计划因为中午时间关系没法完成， 但是在早睡上面比前年有所提高。 来年要保证睡眠， 在此基础上保证健身
+- 如果要打低分，应该是健身。 年初定的计划因为中午时间关系没法完成， 但是在早睡上面比前年有所提高。 来年要保证睡眠， 在此基础上保证健身。 
+
+- 过去一年关闭了微信朋友圈的提醒， 让自己的时间明显增多，增加的时间用于写博客，看书， 写代码以及听网课，这是个不小的改进，需要保持， 同时也让朋友圈的无效社交减少，但需要增加的和同学以及同事的交流需要增强。 总的来说，属于自己的时间多了，所以是件好事。 
 
 
 忙碌的一年，收获满满，新的一年的计划又要开始列起来了， 加油 2020 ！！
