--- a/_posts/2019-12-31-byebye_2019.md
+++ b/_posts/2019-12-31-byebye_2019.md
@@ -1,25 +1,35 @@
 ---
 layout: post
-title:  "Happy New Year"
+title:  "Bye Bye 2019, Happy New Year 2020"
 date:   2019-12-31 23:11:50 +0800
 category: life
 ---
 
-##  感恩 2019 ！！
+## 感恩 2019 !!
 
-##  迎接 2020 ！！
+- 2019年， 保持看书的好习惯，感觉获益匪浅。 《无声告白》 让我明白有时候以爱之名给人的压力却会更大， 刘慈欣等人的 《黑客横行》 更多是在科幻的外衣之下以戏谑的方式调侃这个社会，让作为程序员的自己感觉原来有些故事是只有程序员才看得懂的。
 
+- 工作上因为项目而收获很好的认可，同时新的挑战就是如何管理更多的人。 一个好的团队阶梯是必要的，而如何让大家认可同一个目标以及如何让每一步都切实可行是一个巨大挑战。 回归技术型领导对自己是个更好的提升，所以要在来年好好把握。
 
+- 家庭方面，年初全家去了新西兰， 暑假还带了父母去了长沙当年爸爸参军的地方以及桂林游览山水，一切安排都挺满意。 自己也出差美国两次，去参加了思科的开发者大会。 这么算起来，2019年有超过两个月不在杭州。 似乎还是挺忙的。
 
-- 2019年， 保持看书的好习惯，感觉获益匪浅。 《无声告白》 让我明白有时候以爱之名给人的压力却会更大， 刘慈欣等人的 《黑客横行》 更多是在科幻的外衣之下以戏谑的方式调侃这个社会，让作为程序员的自己感觉原来有些故事是只有程序员才看得懂的。 
+- 如果要打低分，应该是健身。 年初定的计划因为中午时间关系没法完成， 但是在早睡上面比前年有所提高。 来年要保证睡眠， 在此基础上保证健身。
 
-- 工作上因为项目而收获很好的认可，同时新的挑战就是如何管理更多的人。 一个好的团队阶梯是必要的，而如何让大家认可同一个目标以及如何让每一步都切实可行是一个巨大挑战。 回归技术型领导对自己是个更好的提升，所以要在来年好好把握。 
-
-- 家庭方面，年初全家去了新西兰， 暑假还带了父母去了长沙当年爸爸参军的地方以及桂林游览山水，一切安排都挺满意。 自己也出差美国两次，去参加了思科的开发者大会。 这么算起来，2019年有超过两个月不在杭州。 似乎还是挺忙的。 
-
-- 如果要打低分，应该是健身。 年初定的计划因为中午时间关系没法完成， 但是在早睡上面比前年有所提高。 来年要保证睡眠， 在此基础上保证健身。 
-
-- 过去一年关闭了微信朋友圈的提醒， 让自己的时间明显增多，增加的时间用于写博客，看书， 写代码以及听网课，这是个不小的改进，需要保持， 同时也让朋友圈的无效社交减少，但需要增加的和同学以及同事的交流需要增强。 总的来说，属于自己的时间多了，所以是件好事。 
+- 过去一年关闭了微信朋友圈的提醒， 让自己的时间明显增多，增加的时间用于写博客，看书， 写代码以及听网课，这是个不小的改进，需要保持， 同时也让朋友圈的无效社交减少，但需要增加的和同学以及同事的交流需要增强。 总的来说，属于自己的时间多了，所以是件好事。
 
 
-忙碌的一年，收获满满，新的一年的计划又要开始列起来了， 加油 2020 ！！
+忙碌的一年，收获满满，新的一年的计划又要开始列起来了.
+
+## 2020关键词 - **勤**
+
+- 2019年看了很多书，但是真正做了笔记的还是不多，那么2020，针对看过的好的视频和好的图书，一定要通过思维导图做好知识积淀，而且如果真的好的书，需要通过博客作出思考以及整理输出。 博客的字数保持在1500字左右。
+
+- 2019年的锻炼不多，所以2020年要增加锻炼的频率以及多样性，这样可以保持好的社交以及身体锻炼。 多参加羽毛球、游泳，同时多参加中午的健身房锻炼。 确保体检不再错过，保证身体状况优良。
+
+- 2019年工作上管理方面提升了一些，但是自身的整体竞争力还是没有特别快的提高，所以需要真正更多的投入到技术。通过 **[Wakatime](http://wakatime.com/)** 记录编程时间并作为自己的鞭策，每周编程时间不得少于10小时。 如果没有达到，罚自己俯卧撑100下。
+
+- 2019年家庭方面做的还不错， 2020年需要加大对两个宝宝的陪伴。确保每周给小米的阅读次数不得少于4次。 保证小米能独立阅读 **Peter the Cat**. 另外，组织一次家庭东欧旅游，领略异国风光。
+
+- 社交方面，需要通过知识输出和主动交流，增加自己的影响力，让自己成为对周围人有用的人。另外每个月尽量找一个老朋友喝个茶，吃个饭，聊聊天。 朋友结缘不容易，不能让时间冲淡彼此的了解。
+
+2020 将会是个全新的十年的开始，所以也让我辈不敢松懈。
