Update blog social icons and pictures url

--- a/_posts/2020-02-02-if_restart_2020.md
+++ b/_posts/2020-02-02-if_restart_2020.md
@@ -5,6 +5,8 @@ date:   2020-02-02 19:37:50 +0800
 category: life
 ---
 
+![武汉加油](http://tyzg.ys1.cnliveimg.com/577/img/2020/0128/200128080418906_152.jpg)
+
 即使很多年之后，人们还会谈起这个太多出人意料，太多与众不同，包括太少的喜庆和太多的恐惧的新年。
 
 新型冠状病毒性肺炎、武汉、口罩... 成了这个春节的关键词，武汉封城， 黄冈封城，接着是杭州的药店口罩和酒精开始售罄，进出小区要体温。 根据今天最新的疫情播报，全国累计确证已经达到14489， 累计疑似19544， 死亡304， 治愈401。 
