update picture url links

--- a/_posts/2016-11-27-chef-nic.md
+++ b/_posts/2016-11-27-chef-nic.md
@@ -5,7 +5,7 @@ date:   2016-11-27 11:05:50 +0800
 category: life
 ---
 
-![十二道锋味](http://fun.youth.cn/yl24xs/201608/W020160815563556930807.jpg)
+![十二道锋味](https://img9.doubanio.com/view/photo/l/public/p2189805845.webp)
 
 *---十二道锋味
 
