update the link of pictures

--- a/_posts/2024-01-05-reading_review_2023_01.md
+++ b/_posts/2024-01-05-reading_review_2023_01.md
@@ -33,7 +33,7 @@ category: reading
 >  – MARC PARENT
 
 
-![创新者的窘境](https://img3.doubanio.com/view/subject/s/public/s33746397.jpg)
+![创新者的窘境](https://m.media-amazon.com/images/W/MEDIAX_792452-T2/images/I/618BdBwK5ML._SY466_.jpg)
 
 ⭐ 豆瓣评分：9.0
 
@@ -55,7 +55,7 @@ category: reading
 > IN WINTER I PLOT AND PLAN, IN SPRING I MOVE 
 > – HENRY ROLLINS
 
-![长长的回廊](https://img3.doubanio.com/view/subject/s/public/s33724103.jpg)
+![长长的回廊](https://m.media-amazon.com/images/I/51NBGkSr+XL._SY466_.jpg)
 
 ⭐ 豆瓣评分：6.9
 
@@ -70,7 +70,7 @@ category: reading
 > – CHRISTOPHER MORLEY
 
 
-![足利](https://img2.doubanio.com/view/subject/s/public/s34249411.jpg)
+![足利](https://m.media-amazon.com/images/I/71LD5tzs-aL._SY466_.jpg)
 
 ⭐ 豆瓣评分：9.0
 
@@ -96,7 +96,7 @@ category: reading
 > ALL THINGS SEEM POSSIBLE IN MAY
 >  – EDWIN WAY TEALE
 
-![](https://img9.doubanio.com/view/subject/s/public/s34241855.jpg)
+![](https://m.media-amazon.com/images/I/41U3Lsr7q2L._SX342_SY445_.jpg)
 
 ⭐ 豆瓣评分：8.4
 
@@ -120,7 +120,7 @@ category: reading
 > SPRING BEING A TOUGH ACT TO FOLLOW, GOD CREATED JUNE 
 > – AL BERNSTEIN
 
-![](https://img3.doubanio.com/view/subject/s/public/s34413327.jpg)
+![](https://m.media-amazon.com/images/W/MEDIAX_792452-T2/images/I/21W2XjP4PWL.jpg)
 
 ⭐ 豆瓣评分：8.6
 
@@ -130,8 +130,5 @@ category: reading
 
 书中出现的各个风云人物，从仙童到台积电， 从威廉.肖克利到张忠谋。 芯片从诞生开始，战争就没有停歇过。 
 
-## Link
-
-- [Quote](https://organisemyhouse.com/inspirational-quotes-for-each-month/)
 
 #reading 
