update picture link

--- a/_posts/2024-01-05-reading_review_2023_01.md
+++ b/_posts/2024-01-05-reading_review_2023_01.md
@@ -18,7 +18,7 @@ category: reading
 > – JERRY SPINELLI
 
 
-![儿童教育心理学](https://img3.doubanio.com/view/subject/s/public/s33783887.jpg)
+![儿童教育心理学](https://m.media-amazon.com/images/I/41tS7frrWEL._SX342_SY445_.jpg)
 
 ⭐ 豆瓣评分：8.4
 
