update format of 2016 posts

--- a/_posts/2016/2016-11-27-chef-nic.md
+++ b/_posts/2016/2016-11-27-chef-nic.md
@@ -5,9 +5,9 @@ date:   2016-11-27 11:05:50 +0800
 category: life
 ---
 
-[pic: 十二道锋味](https://img9.doubanio.com/view/photo/l/public/p2189805845.webp)
+![十二道锋味](https://img9.doubanio.com/view/photo/l/public/p2189805845.webp)
 
-*---十二道锋味
+*---十二道锋味*
 
 在各种类型真人秀此起彼伏的今天， 谢霆锋的这档节目倒还真是独树一帜，标新立异。 节目对美食的追求， 加上明星嘉宾的联袂， 外加世界各地异域风情， 让这档节目居然开到了第三季。 
 
