--- a/_posts/2016/2016-12-08-mockito.md
+++ b/_posts/2016/2016-12-08-mockito.md
@@ -7,7 +7,7 @@ category: tech
 
 ![Mockito](https://github.com/mockito/mockito.github.io/raw/master/img/logo%402x.png)
 
-*---Mockito
+*---Mockito* 
 
 软件开发中必不可少的就是单元测试， 而对于Service-DAO 结构的Java系统， 就必然要在两层之间加入Mock来做测试， 从而避免在开发Service层时对DAO的依赖。 
 
